fixed project modals on mobile

--- a/css/contact.css
+++ b/css/contact.css
@@ -16,7 +16,7 @@
 
 .contact .subheader {
 	max-width: 1000px;
-	width: 98%;
+	width: 97.5%;
 }
 
 .form-container {
