--- a/css/responsive.css
+++ b/css/responsive.css
@@ -32,7 +32,8 @@
 		width: auto;
 	}
 
-	.blog .subheader {
+	.blog .subheader,
+	.projects .subheader {
 		width: 55%;
 	}
 
@@ -144,11 +145,6 @@
 
 	.blog .subheader {
 		width: 75%;
-	}
-
-	/* Projects */
-	.projects .subheader {
-		width: 90%;
 	}
 }
 
@@ -417,18 +413,24 @@
 
 	.modal {
 		z-index: 1001;
-		background-color: transparent;
 	}
 
 	.modal-content {
-		width: 100%;
-		height: 100%;
-		background-color: rgba(68, 71, 90, 0.8);
+		padding: 1rem;
+		align-items: center;
+		margin-top: auto;
+		margin-bottom: auto;
+		height: auto;
+		width: 90%;
 	}
 
 	.close-button {
-		width: 1.8rem;
-		line-height: 1.8rem;
+		width: 2rem;
+		line-height: 2rem;
+		font-size: 1.5rem;
+	}
+
+	.modal-header {
 		font-size: 1.2rem;
 	}
 
@@ -902,10 +904,6 @@
 	/* Projects */
 	.projects .subheader p {
 		font-size: 1.1rem;
-	}
-
-	.modal-content {
-		padding: 1rem;
 	}
 
 	/* Contact */
